# vcgc

./: .env.example  .gitignore  .gitmodules  MANIFEST.in  README.md  build.py  example_usage.py  graph_2_grover_circuit.ipynb  graph_4_grover_circuit copy.ipynb  graph_gen.ipynb  grover_circuit_classicalfunction.ipynb  grover_circuit_classicalfunction_bitvec.ipynb  grover_circuit_classicalfunction_zed_city.ipynb  grover_circuit_for_3_node_coloring_1_query.ipynb  grover_circuit_for_3_node_coloring_1_query_inverted.ipynb  grover_circuit_for_3_node_coloring_2_queries.ipynb  grover_circuit_for_3_node_no_toffoli_inverted.ipynb  grover_sat_version.ipynb  ibm_hello_world.ipynb  ibm_quantum_bias_check.ipynb  playground.py  pyproject.toml  requirements.txt  setup.py  setup_ibm.py  shell.nix  simple_vertex_coloring_grover.ipynb  testing.py
data/: BENCHMARKS.md  generate_benchmarks.py  template.col
data/benchmarks/: K3.col  K5.col  grid6_2_colored.col  linear_2_colored.col  myciel5.col  zed-city_2019.col
data/drawio/: g3.drawio
data/output/: benchmark_results.csv  (+2 more)
dimacs/: 1-FullIns_3.col  2-Insertions_3.col  BENCHMARKS.md  K3.col  g001.dimacs  g002.dimacs  g004.dimacs  g006.col  myciel3.col  myciel4.col  template.dimacs
examples/: comparing_vcgc_to_saha_belletti.ipynb  example_usage.py  run_benchmarks.py  saha_belleti_usage.py  vcgc_usage.py
experiments/: graph_gen.ipynb  grover_circuit_for_3_node_coloring_1_query_inverted.ipynb  grover_circuit_for_3_node_no_toffoli.ipynb  grover_circuit_for_3_node_no_toffoli_inverted.ipynb  k3_saha_comparator_depth_check.ipynb
graph_circuits/: graph_2_grover_circuit.ipynb
graphs/: g001.ipynb  g001_no_rx.ipynb  g002.ipynb  g003.ipynb  g004.ipynb  g2.drawio
grover_vertex_coloring/: grover_circuit_classicalfunction.ipynb  grover_circuit_classicalfunction_zed_city.ipynb  grover_circuit_for_3_node_coloring_2_queries.ipynb
setup/: ibm_quantum_platform.ipynb
testing/: manual_coloring.v
tests/: __init__.py  test_basic.py  test_imports.py
vcgc/: __init__.py  boolean.py  circuit.py  dimacs.py  network.py  synthesis.py
xag_synth/: test.v  xag_from_expression.ipynb  xag_synthesizer.ipynb
(+92 files in other folders)
