[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vcgc"
dynamic = ["version"]
description = "Vertex Coloring Problem with Quantum Computing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ismael Barzani", email = "i_ridha@live.concordia.ca"},
]
maintainers = [
    {name = "Ismael Barzani", email = "i_ridha@live.concordia.ca"},
]
keywords = ["quantum computing", "graph coloring", "vertex coloring", "quantum circuits"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "networkx",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/TheBarzani/vcgc"
Repository = "https://github.com/TheBarzani/vcgc.git"
Documentation = "https://github.com/TheBarzani/vcgc#readme"
"Bug Tracker" = "https://github.com/TheBarzani/vcgc/issues"

[tool.setuptools_scm]
write_to = "vcgc/_version.py"

[tool.setuptools.packages.find]
include = ["vcgc*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
